add support for smbus control and set base addr

--- a/qml-ui/qml.qrc
+++ b/qml-ui/qml.qrc
@@ -2,7 +2,11 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>FlatButton.qml</file>
+		<file>Popup.qml</file>
         <file>icons/ic_rotate_left.png</file>
         <file>icons/ic_rotate_right.png</file>
+        <file>icons/ic_backward.png</file>
+        <file>icons/ic_forward.png</file>
+        <file>icons/ic_media_pause.png</file>
     </qresource>
 </RCC>
